# kasane

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  mise.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/kasane-adapters/: Cargo.toml
crates/kasane-adapters/examples/: gen_minimal_pptx.rs  make_djvu_fixture.rs
crates/kasane-adapters/src/: detect.rs  guard.rs  lib.rs  xmltext.rs  ziputil.rs
crates/kasane-adapters/src/djvu/: doc.rs  image.rs  mod.rs  outline.rs  text.rs
crates/kasane-adapters/src/epub/: mod.rs  opf.rs  xhtml.rs
crates/kasane-adapters/src/mobi/: indx.rs  kf8.rs  mod.rs  normalize.rs  palmdb.rs  palmdoc.rs  splice.rs
crates/kasane-adapters/src/ocr/: mod.rs  tesseract.rs
crates/kasane-adapters/src/pdf/: content.rs  doc.rs  image.rs  layout.rs  mod.rs  outline.rs
crates/kasane-adapters/src/pptx/: mod.rs  rels.rs  slide.rs
crates/kasane-cli/: Cargo.toml
crates/kasane-cli/src/: main.rs
crates/kasane-cli/tests/: e2e.rs
crates/kasane-core/: Cargo.toml
crates/kasane-core/src/: balance.rs  lib.rs  nav.rs  options.rs  paths.rs  refs.rs  section.rs  sitetree.rs
crates/kasane-ir/: Cargo.toml
crates/kasane-ir/src/: assets.rs  block.rs  doc.rs  ids.rs  inline.rs  lib.rs
crates/kasane-writer/: Cargo.toml
crates/kasane-writer/src/: frontmatter.rs  lib.rs  markdown.rs
docs/superpowers/plans/: 2026-07-19-kasane-core-pipeline.md  2026-07-19-pptx-adapter.md  2026-07-20-epub-fidelity.md  2026-07-20-mise-tasks-and-ci.md  2026-07-21-mobi-azw3-adapter.md  2026-07-21-pdf-adapter.md  2026-07-22-djvu-adapter.md  2026-07-23-djvu-page-rasterization.md  2026-07-24-math-to-latex.md  2026-07-24-ocr-seam.md
docs/superpowers/specs/: 2026-07-19-kasane-document-to-markdown-design.md  2026-07-19-pptx-adapter-design.md  2026-07-20-epub-fidelity-design.md  2026-07-20-mise-tasks-and-ci-design.md  2026-07-21-mobi-azw3-adapter-design.md  2026-07-21-pdf-adapter-design.md  2026-07-22-djvu-adapter-design.md  2026-07-23-djvu-page-rasterization-design.md  2026-07-24-math-to-latex-design.md  2026-07-24-ocr-seam-design.md
tests/fixtures/azw3/: lying-skel.azw3  make_minimal_azw3.py  minimal.azw3
tests/fixtures/djvu/: README.md  sample.djvu  scanned.djvu
tests/fixtures/epub/: make_rich_epub.py  minimal.epub  rich.epub
tests/fixtures/mobi/: make_minimal_mobi.py  minimal-drm.mobi  minimal.mobi
tests/fixtures/pdf/: make_pdf_fixtures.py
tests/fixtures/pptx/: minimal.pptx
