[package]
name = "kasane-adapters"
description = "Format detection and parsers (EPUB, PPTX) for the kasane document converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kasane-ir.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
thiserror = "1"
html5ever = "0.33"
markup5ever_rcdom = "0.5.4-unofficial"

[dev-dependencies]
kasane-core.workspace = true
kasane-writer.workspace = true
tempfile = "3"

[lints]
workspace = true
