[package]
name = "kasane-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kasane"
path = "src/main.rs"

[dependencies]
kasane-adapters = { path = "../kasane-adapters" }
kasane-core = { path = "../kasane-core" }
kasane-writer = { path = "../kasane-writer" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
