[package]
name = "kasane-cli"
description = "CLI that converts documents and ebooks into agent-friendly Markdown trees"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kasane"
path = "src/main.rs"

[dependencies]
kasane-adapters.workspace = true
kasane-core.workspace = true
kasane-writer.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[features]
ocr = ["kasane-adapters/ocr"]

[lints]
workspace = true
