[package]
name = "kasane-core"
description = "Pure structuring engine for kasane: fold, balance, paths, refs, nav"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kasane-ir.workspace = true

[lints]
workspace = true
