[package]
name = "kasane-writer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kasane-ir = { path = "../kasane-ir" }
kasane-core = { path = "../kasane-core" }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
