[package]
name = "kasane-writer"
description = "Renders the kasane IR to GitHub-Flavored Markdown file trees"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kasane-ir.workspace = true
kasane-core.workspace = true
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
